<resources>
    <string name="app_name">Jogjas</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="sign_up_now">SIGN UP NOW</string>
    <string name="jogjas">JOGJAS</string>
    <string name="wording_email_kosong">Email tidak boleh kosong</string>
    <string name="wording_password_kosong">Password tidak boleh kosong</string>
    <string name="wording_password_kependekan">Password minimal 6 karakter</string>
    <string name="wording_email_pwd_missmatch">Password dan email tidak ditemukan</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="malformat_email">Format email salah</string>
    <string name="explore_jogja">Explore Jogja</string>
    <string name="wording_referensi">Referensi tempat wisata di Jogja terpopuler yang bisa kamu kunjungi</string>
    <string name="jogjas_app">JOGJAS App</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="reason_wording">Aplikasi ini saya buat sebagai syarat untuk lolos test interview di PT Erporate Solusi Global.</string>
    <string name="ya">IYA</string>
    <string name="tidak">TIDAK</string>
    <string name="wording_signout">Apakah anda yakin ingin keluar?</string>
    <string name="pwd_tdak_sama">Password tidak sama</string>
    <string name="wording_gagal_register">Registrasi gagal, cek koneksi internet</string>
    <string name="wording_gagal_signin">Sign in gagal, periksa koneksi internet</string>
</resources>
