<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AboutActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jogjas_app"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/tvAbout"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_1_0_0"
        android:layout_below="@+id/tvAbout"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reason_wording"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"/>

</RelativeLayout>